--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <section id="sec-0">
         <header class="top">
             <div class="container">
-                <p>+255 614 100 097</p>
-                <p>tech_ontz@gmail.com</p>
+                <p>+255 769 190 100</p>
+                <p>info@techonsoftware.co.tz</p>
                 <p>Mon-Sat 8:00-19:00</p>
                 <div class="social">
                     <a href="#" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
@@ -35,8 +35,8 @@
             </div>
             <div class="container">  
                 <h1>
-                    <span>TEC</span>ON 
-                    <p>Tech_ontz Software Company</p>
+                    <span>TECH</span>ON 
+                    <p>Your Partner in Software Solutions</p>
                 </h1>
                 <label for="menu"><i class="fas fa-bars"></i></label>
                 <input type="checkbox" id="menu">
@@ -53,10 +53,10 @@
         </header>
         <article>
         <div class="container">
-            <h1> We are Certified Engineers</h1>
-            <h2>Construction services<br>
-            <span>Creative AND professional</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore fuga debitis distinctio doloribus quis adipisci asperiores soluta quidem nemo aperiam maiores tempora, accusamus minus odit magni corporis molestias dignissimos porro? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione assumenda recusandae earum totam fuga!</p>
+            <h1>Innovative Software Solutions</h1>
+            <h2>Your Vision, Our Technology<br>
+            <span>Transforming Ideas into Reality</span></h2>
+            <p>At TechOn Software, we provide cutting-edge technology solutions to help businesses thrive in the digital age. Our team of experienced developers and designers is dedicated to delivering innovative software that meets your unique needs.</p>
             <a href="#">Show More</a>
             <a href="#">view project</a>
         </div>
@@ -65,45 +65,45 @@
     <section id="sec-1">
         <div class="container">
             <article>
-                <h1>Welcome to our company</h1>
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate deserunt magni sint mollitia similique corporis quis voluptatibus, eos tempora ealias illo nemo excepturi blanditiis vitae impedit minus tempore praesentium harum. <br><br>Quis, temporibus dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit maxime minima quod eius aspernatur. Accusantium sed sunt corrupti sapiente deleniti?</p>
+                <h1>Welcome to TechOn Software</h1>
+                <h2>Empowering Businesses Through Technology</h2>
+                <p>We specialize in custom software development, mobile app creation, and website design. Our goal is to enhance your business efficiency through tailored tech solutions. <br><br>With our expert team, we guarantee a product that not only meets your requirements but also exceeds your expectations.</p>
                 <a href="#">Show More</a>
             </article>
-            <aside><img src="Images/img1.png" alt="man"></aside>
+            <aside><img src="Images/img1.png" alt="Tech Team"></aside>
         </div>
     </section>
     <section id="sec-2">
         <div class="container">
-            <h1> why choose us?</h1>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ducimus, voluptatibus perferendis voluptates quidem magni illo odit velit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, expedita tenetur? Pariatur itaque eveniet nam possimus omnis veniam cupiditate provident.</P>
-            <article>
+            <h1> Why Choose TechOn Software?</h1>
+            <P>Choosing the right tech partner is crucial for your success. Here are a few reasons why we stand out:</p>
+                <article>
                 <figure>
-                    <div><img src="Images/ico1.png" alt=""></div>
+                    <div><img src="Images/ico1.png" alt="Quality"></div>
                     <div class="cont">
-                        <h2>we deliver quality</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A iste ad illum, ducimus asperiores necessitatibus reprehenderit?</p>
+                        <h2>Quality Assurance</h2>
+                    <p>We prioritize quality in all our projects to ensure exceptional performance and user satisfaction.</p>
                     </div>
                 </figure>
                 <figure>
-                    <div><img src="Images/ico2.png" alt=""></div>
+                    <div><img src="Images/ico2.png" alt="Timely Delivery"></div>
                     <div class="cont">
-                        <h2>Always on time</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A iste ad illum, ducimus asperiores necessitatibus reprehenderit?</p>
+                        <h2>Timely Delivery</h2>
+                        <p>Our team adheres to strict deadlines to deliver your projects on time, without compromising quality.</p>
                     </div>
                 </figure>
                 <figure>
-                    <div><img src="Images/ico3.png" alt=""></div>
+                    <div><img src="Images/ico3.png" alt="Passion"></div>
                     <div class="cont">
-                        <h2>we are passionate</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A iste ad illum, ducimus asperiores necessitatibus reprehenderit?</p>
+                        <h2>Passionate Team</h2>
+                        <p>Our dedicated professionals are passionate about technology and committed to delivering the best results.</p>
                     </div>
                 </figure>
                 <figure>
-                    <div><img src="Images/ico4.png" alt=""></div>
+                    <div><img src="Images/ico4.png" alt="Professional Services"></div>
                     <div class="cont">
-                        <h2>proffesional services</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A iste ad illum, ducimus asperiores necessitatibus reprehenderit?</p>
+                        <h2>Professional Services</h2>
+                        <p>We provide comprehensive tech services tailored to meet the specific needs of your business.</p>
                     </div>
                 </figure>
             </article>
@@ -115,31 +115,31 @@
             <div class="cont">
                 <div class="card border-0">
                     <div>
-                        <img src="Images/card1.jpg" class="card-img-top" alt="...">
-                        <h5 class="caption">Construction Management</h5>
+                        <img src="Images/card1.jpg" class="card-img-top" alt="Software Development">
+                        <h5 class="caption">Custom Software Development</h5>
                     </div>
                     <div class="card-body px-0 pt-4">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum expedita tempora quam omnis deleniti!(word break with hyphen test) jjjjjjjjjjjjjjjjjjhuyiouuioiuojjjjjjjjjjj54455555788uiyuuihjhhjhjh Consequuntur, distinctio magnam beatae dignissimos assumenda quisquam accusamus similique aut esse pariatur consectetur ab adipisci cupiditate sint maxime dolorum doloremque autem quasi nostrum nobis dicta? Sit ipsum enim sint quos quod nulla consequuntur amet voluptates. Voluptate cum facilis libero rem veritatis?</p>
+                        <p>We build tailor-made software solutions that fit your business requirements. Our development process ensures a robust and scalable product that meets your objectives. Our team works closely with you to understand your goals and deliver a solution that truly aligns with your vision.</p>
                     <a href="#">Show More</a>
                     </div>
                 </div>
                 <div class="card border-0">
                     <div>
-                        <img src="Images/card2.jpg" class="card-img-top" alt="...">
-                        <h5 class="caption">Renovation</h5>
+                        <img src="Images/card2.jpg" class="card-img-top" alt="Mobile App Development">
+                        <h5 class="caption">Mobile App Development</h5>
                     </div>
                     <div class="card-body px-0 pt-4">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum expedita tempora quam omnis deleniti!(word break with hyphen test) jjjjjjjjjjjjjjjjjjhuyiouuioiuojjjjjjjjjjj54455555788uiyuuihjhhjhjh Consequuntur, distinctio magnam beatae dignissimos assumenda quisquam accusamus similique aut esse pariatur consectetur ab adipisci cupiditate sint maxime dolorum doloremque autem quasi nostrum nobis dicta? Sit ipsum enim sint quos quod nulla consequuntur amet voluptates. Voluptate cum facilis libero rem veritatis?</p>
+                        <p>Our mobile app development services ensure that your business stays connected with customers through engaging and intuitive applications. We create cross-platform apps that provide a seamless experience on all devices.</p>
                     <a href="#">Show More</a>
                     </div>
                 </div>
                 <div class="card border-0">
                     <div>
-                        <img src="Images/card3.jpg" class="card-img-top" alt="...">
-                        <h5 class="caption">Architectuure</h5>
+                        <img src="Images/card3.jpg" class="card-img-top" alt="Web Development">
+                        <h5 class="caption">Web Development</h5>
                     </div>
                     <div class="card-body px-0 pt-4">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum expedita tempora quam omnis deleniti!(word break with hyphen test) jjjjjjjjjjjjjjjjjjhuyiouuioiuojjjjjjjjjjj54455555788uiyuuihjhhjhjh Consequuntur, distinctio magnam beatae dignissimos assumenda quisquam accusamus similique aut esse pariatur consectetur ab adipisci cupiditate sint maxime dolorum doloremque autem quasi nostrum nobis dicta? Sit ipsum enim sint quos quod nulla consequuntur amet voluptates. Voluptate cum facilis libero rem veritatis?</p>
+                        <p>We design and develop responsive websites that not only look great but also drive results. Our web solutions are optimized for SEO and provide a user-friendly experience to enhance engagement.</p>
                     <a href="#">Show More</a>
                     </div>
                 </div>
@@ -148,14 +148,14 @@
     </section>
     <section id="sec-4">
         <div class="container">
-            <h1>made with love</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni reiciendis accusamus autem tenetur vero, facilis omnis, ullam quis mollitia deleniti ea similique laboriosam numquam ab dignissimos! Ducimus, eveniet at. A debitis eum tenetur dolor magni.</p>
+            <h1>Crafted with Care</h1>
+            <p>At TechOn Software, we believe in creating solutions that are not just functional but also innovative and user-friendly. Our commitment to excellence is reflected in every project we undertake.</p>
             <div class="filter">
                 <a href="#">Show all</a>
-                <a href="#">buildings</a>
-                <a href="#">interior design</a>
-                <a href="#">isolation</a>
-                <a href="#">plumping</a>
+                <a href="#">Web Development</a>
+                <a href="#">Mobile Applications</a>
+                <a href="#">Cloud Solutions</a>
+                <a href="#">AI & Machine Learning</a>
             </div>
             <div class="cont">
                 <img class="wow animated fadeIn slow" src="Images/gallery1.jpg" alt="pic">
@@ -171,36 +171,36 @@
     <section id="sec-5">
         <div class="container">
             <h1>customer reviews</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni reiciendis accusamus autem tenetur vero, facilis omnis, ullam quis mollitia deleniti ea similique laboriosam numquam ab dignissimos! Ducimus, eveniet at. A debitis eum tenetur dolor magni.</p>
+            <p>"TechOn Software has transformed our business! Their expertise and support have been invaluable."</p>
             <div class="cont">
                 <article class="quoteblock">
                     <div class="quotetxt arrow">
                         <p><img src="Images/blockquote2.png" alt="quote mark"></p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius ipsum id inventore facilis laboriosam est possimus explicabo quis ipsa, perferendis nam ratiendus neque earum iure maxime non soluta voluptates deleniti provident! Commodi, eveniet?</p>
+                        <p>"TechOn Software has transformed our business! Their expertise and support have been invaluable."</p>
                     </div>
                     <figure>
                         <img class="customer" src="Images/cust1.png" alt="customer1">
-                        <figcaption>John smith</figcaption>
+                        <figcaption>Reheme Mbura</figcaption>
                     </figure>
                 </article>
                 <article class="quoteblock">
                     <div class="quotetxt arrow">
                         <p><img src="Images/blockquote1.png" alt="quote mark"></p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius ipsum id inventore facilis laboriosam est possimus explicabo quis ipsa, perferendis nam ratiendus neque earum iure maxime non soluta voluptates deleniti provident! Commodi, eveniet?</p>
+                        <p>"The team at TechOn delivered our project ahead of schedule, and we couldn't be happier with the results."</p>
                     </div>
                     <figure>
                         <img class="customer" src="Images/cust1.png" alt="customer1">
-                        <figcaption>John smith</figcaption>
+                        <figcaption>Condrat Rafiki</figcaption>
                     </figure>
                 </article>
                 <article class="quoteblock">
                     <div class="quotetxt arrow">
                         <p><img src="Images/blockquote2.png" alt="quote mark"></p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius ipsum id inventore facilis laboriosam est possimus explicabo quis ipsa, perferendis nam ratiendus neque earum iure maxime non soluta voluptates deleniti provident! Commodi, eveniet?</p>
+                        <p>"Outstanding service and quality! TechOn Software is our go-to partner for all our tech needs."</p>
                     </div>
                     <figure>
                         <img class="customer" src="Images/cust1.png" alt="customer1">
-                        <figcaption>John smith</figcaption>
+                        <figcaption>JohnBosco Komba</figcaption>
                     </figure>
                 </article>
             </div>
@@ -224,12 +224,12 @@
     <section id="sec-6">
         <div class="container">
             <div class="about">
-                <h1>About Company</h1>
+                <h1>About TechOn Software</h1>
                 <h2>
-                    CONSTRUCTION 
-                    <p>Lorem ipsum dolor sit amit.</p>
+                    SOFTWARE DEVELOPMENT 
+                    <p>Empowering Businesses Through Technology</p>
                 </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus eius nisi repudiandae ipsam pariatur, quos perspiciatis eaque officia rerum odio modi sed fugiat mollitia? Rerum, architecto obcaecati!</p>
+                <p>At TechOn, we provide top-notch software solutions tailored for your business success. Let's build something great together!</p>
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>  
@@ -245,7 +245,7 @@
                 <a href="#">Contact Us</a>
                 <a href="#">Privacy Policy</a>
                 <a href="#">Our terms</a>
-                <a href="#">Site map</a>
+                <a href="#">Our Location on map</a>
             </div>
             <div class="posts">
                 <h1>Latest posts</h1>
@@ -257,16 +257,16 @@
             </div>
             <div class="contact">
                 <h1>Contact us</h1>
-                <p>123 New Line, London UK</p>
-                <p>Hello@contact-us.com</p>
-                <p>+44 00 00 1234<br>+44 00 00 1234</p>
+                <p>Dar es Salaam, Tanzania</p>
+                <p>info@techonsoftware.co.tz</p>
+                <p>+255 769 190 100<br>+255 764 075 599</p>
 
             </div>
         </div>
     </section>
     <section id="sec-7">
         <div class="container">
-            <p>Copyright @2022 | Designed by <span>Web Technologies Team</span></p>
+            <p>Copyright @2024 | Designed by <span>TechOn Software Team</span></p>
         </div>
     </section>
 
